--- a/src/less/pagination.less
+++ b/src/less/pagination.less
@@ -11,7 +11,7 @@
         justify-content: space-between;
         padding: 10px;
         height: 100%;
-        background: var(--bg-bt-pagination-container, white);
+        background: var(--bg-bt-pagination-container, red);
     }
 
     &-rpp-con {
